<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_balance_mensual"
            android:icon="@drawable/ic_cash_check"
            android:iconTint="@color/black"
            android:title="@string/menu_balance_mensual"/>
        <item
            android:id="@+id/nav_balance_general"
            android:icon="@drawable/ic_cash_check"
            android:iconTint="@color/black"
            android:title="@string/menu_balance_general"/>
        <item
            android:id="@+id/nav_categorias"
            android:icon="@android:drawable/btn_star"
            android:iconTint="@color/black"
            android:title="@string/lbl_categorias"/>
    </group>
</menu>