<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <import type="android.view.View"/>
        <variable
            name="registroOperacionesMensualesActivity"
            type="com.sesi.miplata.view.main.RegistroOperacionesDayliActivity" />
        <variable
            name="viewModel"
            type="com.sesi.miplata.view.main.RegistroOperacionesMensualesViewModel" />
    </data>
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.main.RegistroOperacionesDayliActivity">
    <com.google.android.gms.ads.AdView
        android:id="@+id/adViewBanner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:elevation="@dimen/_5sdp"
        app:adSize="BANNER"
        app:adUnitId="@string/banner"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/btn_guardar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/adViewBanner">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/btn_delete"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:background="@color/red"
                android:src="@drawable/trash_can_outline"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guidelineHeader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent=".15" />

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lbl_nuevo_registro"
                android:textAlignment="center"
                android:textSize="@dimen/_15ssp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/guidelineHeader" />

            <EditText
                android:id="@+id/et_nombre"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:autofillHints=""
                android:hint="@string/lbl_nombre"
                android:inputType="text"
                android:textColor="@color/black"
                android:textSize="@dimen/_12ssp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_title" />

            <EditText
                android:id="@+id/et_nota"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:autofillHints=""
                android:hint="@string/lbl_nota"
                android:inputType="textMultiLine"
                android:lines="3"
                android:maxLines="3"
                android:textColor="@color/black"
                android:textSize="@dimen/_12ssp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/et_nombre" />

            <EditText
                android:id="@+id/et_date"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:autofillHints=""
                android:clickable="true"
                android:drawableStart="@android:drawable/ic_menu_my_calendar"
                android:drawablePadding="15dp"
                android:ems="10"
                android:focusable="false"
                android:hint="@string/lbl_date_format"
                android:inputType="date"
                android:textColor="@color/black"
                android:textSize="@dimen/_12ssp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/et_nota" />

            <EditText
                android:id="@+id/et_monto"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:autofillHints=""
                android:drawableStart="@drawable/ic_paid"
                android:drawablePadding="15dp"
                android:hint="@string/lbl_default_monto"
                android:inputType="numberDecimal"
                android:textColor="@color/black"
                android:textSize="@dimen/_12ssp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/et_date" />


            <androidx.appcompat.widget.AppCompatSpinner
                android:id="@+id/spinner_tipo"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:background="@drawable/spinner_bg"
                android:dropDownVerticalOffset="?attr/dropdownListPreferredItemHeight"
                android:entries="@array/spinnerItems"
                android:popupBackground="@android:color/white"
                android:popupElevation="3dp"
                android:stateListAnimator="@drawable/spinner_sla"
                android:textAlignment="center"
                android:textSize="@dimen/_12ssp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/et_monto" />

            <androidx.appcompat.widget.AppCompatSpinner
                android:id="@+id/spinner_categorias"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="16dp"
                android:background="@drawable/spinner_bg"
                android:dropDownVerticalOffset="?attr/dropdownListPreferredItemHeight"
                android:popupBackground="@android:color/white"
                android:popupElevation="3dp"
                android:stateListAnimator="@drawable/spinner_sla"
                android:textAlignment="center"
                android:textSize="@dimen/_12ssp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/spinner_tipo" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_guardar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/primaryColor"
        android:text="@string/lbl_guardar"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="@dimen/_15ssp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>
</layout>