<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.main.MenuActivity"
    android:background="@color/primaryColor">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/Theme.MiPlata.AppBarOverlay"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/Theme.MiPlata.PopupOverlay" />

    </com.google.android.material.appbar.AppBarLayout>

    <com.google.android.gms.ads.AdView
        android:id="@+id/adViewBanner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="@dimen/_5sdp"
        app:adSize="BANNER"
        app:adUnitId="@string/banner"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayout" />

    <include
        android:id="@+id/content"
        layout="@layout/content_current_balance"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/adViewBanner" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/fabLayoutOpRec"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clipToPadding="false"
        android:layout_marginEnd="16dp"
        android:gravity="center_vertical"
        android:layout_marginBottom="23dp"
        android:layout_gravity="bottom|end"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:visibility="gone">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="7dp"
            android:background="@color/primaryLightColor"
            android:textColor="@color/green_1B4544"
            android:text="@string/fab_menu_add_op_rec"
            android:textSize="15sp"
            android:textStyle="bold"/>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_add_op_rec"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            app:fabSize="mini"
            app:tint="@color/white"
            android:backgroundTint="@color/green_1B4544"
            app:srcCompat="@drawable/ic_paid"
            android:contentDescription="@string/content_description"/>
    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/fabLayoutOpDay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clipToPadding="false"
        android:layout_marginEnd="16dp"
        android:gravity="center_vertical"
        android:layout_marginBottom="23dp"
        android:layout_gravity="bottom|end"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:visibility="gone">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/primaryLightColor"
            android:textColor="@color/green_1B4544"
            android:text="@string/fab_menu_add_op_day"
            android:textSize="15sp"
            android:textStyle="bold"
            android:padding="7dp"/>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:id="@+id/fab_add_op_day"
            app:fabSize="mini"
            app:tint="@color/white"
            android:backgroundTint="@color/green_1B4544"
            app:srcCompat="@drawable/ic_cash_check"
            android:contentDescription="@string/content_description"/>

    </androidx.appcompat.widget.LinearLayoutCompat>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginEnd="@dimen/fab_margin"
        android:layout_marginBottom="16dp"
        app:fabSize="mini"
        app:tint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:backgroundTint="@color/green_1B4544"
        android:src="@drawable/ic_plus"
        android:contentDescription="@string/content_description"/>

</androidx.constraintlayout.widget.ConstraintLayout>